--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,10 +2,15 @@
     display: grid;
     grid-template-columns: 1fr 4fr;
     height: 100%;
+    width: 100%;
 }
 
 #form-section {
     border: 1px solid black;
+    padding: 12px;
+
+    background-color: #006600;
+    color: #ffffe6;
 }
 
 #form-section form {
@@ -15,27 +20,49 @@
     gap: 1rem;
 
     height: 100%;
+
+}
+
+input {
+    background-color: #ffffe6;
+    border-radius: 5px;
+    padding-left: 8px;
 }
 
 fieldset {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 0.5rem;
+
+    border-radius: 10px;
+    padding: 36px;
 }
+
+legend, label {
+    font-weight: bold;
+}
+
 
 #display-section {
     border: 1px solid black;
 
     display: grid;
     grid-template-rows: 1fr 4fr 4fr;
+
+    padding: 12px;
+    
 }
 
-#prof-Exp {
-    display: flex;
-    flex-wrap: wrap;
-}
 
-#education {
-    display: flex;
-    flex-wrap: wrap;
+form button {
+    padding: 4px 24px;
+    background-color: #663300;
+    color: #ffffe6;
+    border-radius: 10px;
+    box-shadow: 0 0 1px 1px #ffffe6;
+
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
 }
