--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,15 @@
 html, body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Times New Roman', Times, serif;
+
+    background-color: #ffffe6;
+
 }
 
 #root {
@@ -9,8 +18,26 @@ html, body {
     align-items: center;
     height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 main {
     flex: 1;
+    width: 100%;
+}
+
+header {
+    background-color: #663300;
+    width: 100%;
+
+    text-align: center;
+    color: #ffffe6;
+}
+
+footer {
+    background-color: #663300;
+    width: 100%;
+    text-align: center;
+    color: #ffffe6;
 }
